--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- 오픈그래프 설정-->
   <meta property="og:title" content="이솝"><!-- 타이틀 -->
-  <meta property="og:url" content="https://tickletheheels.github.io/aesop"><!-- 도메인 -->
+  <meta property="og:url" content="http://test.dothome.co.kr"><!-- 도메인 -->
   <meta property="og:description" content="순환을 위한 이솝의 여정"><!-- 간략한 설명, 모토나 슬로건,  -->
   <meta property="og:image" content="images/common/open.png"><!-- 이미지 비율이 있음 (크기는 없음) 2:1 비율 -->
 
@@ -169,7 +169,7 @@
     <section id="main_video" class="section">
       <div class="inner_100">
         <h2>순환을 위한<br> 이솝의 여정</h2>
-        <video src="images/main/main_visual_01.mp4" autoplay loop muted></video>
+        <video src="images/main/main_visual_01.mp4" autoplay loop muted playsinline></video>
       </div><!-- inner_100 -->
     </section>
 
