--- a/sub/product.html
+++ b/sub/product.html
@@ -11,7 +11,7 @@
 
   <!-- 오픈그래프 설정-->
   <meta property="og:title" content="이솝"><!-- 타이틀 -->
-  <meta property="og:url" content="https://tickletheheels.github.io/aesop"><!-- 도메인 -->
+  <meta property="og:url" content="http://test.dothome.co.kr"><!-- 도메인 -->
   <meta property="og:description" content="순환을 위한 이솝의 여정"><!-- 간략한 설명, 모토나 슬로건,  -->
   <meta property="og:image" content="images/common/open.png"><!-- 이미지 비율이 있음 (크기는 없음) 2:1 비율 -->
 
@@ -316,70 +316,56 @@
 
             <div class="product_box_bg product_box_04">
               <dl class="cleanser_list">
-                <a href="../sub/product-detail.html"><img src="../images/sub/product/cleanser_01.png" alt="리무브"></a>
-                <dt>리무브</dt>
-                <dd>60ml / 27,000</dd>
+                <a href="../sub/product-detail.html"><img src="../images/sub/product/toner-01.png" alt="토너"></a>
+                <dt>파슬리 씨드 안티 옥시던트 페이셜 토너</dt>
+                <dd>60ml / 47,000</dd>
                 <a href="#"><img src="../images/common/good.png" alt="찜"> </a>
                 <a href="#"><img src="../images/common/cart.png" alt="장바구니"></a>
               </dl>
 
               <dl class="cleanser_list">
-                <a href="../sub/product-detail.html"><img src="../images/sub/product/cleanser_01.png" alt="리무브"></a>
-                <dt>리무브</dt>
-                <dd>60ml / 27,000</dd>
+                <a href="../sub/product-detail.html"><img src="../images/sub/product/toner-02.png" alt="토너"></a>
+                <dt>비 앤 티 밸런싱 토너</dt>
+                <dd>60ml / 39,000</dd>
                 <a href="#"><img src="../images/common/good.png" alt="찜"> </a>
                 <a href="#"><img src="../images/common/cart.png" alt="장바구니"></a>
               </dl>
 
               <dl class="cleanser_list">
-                <a href="../sub/product-detail.html"><img src="../images/sub/product/cleanser_01.png" alt="리무브"></a>
-                <dt>리무브</dt>
-                <dd>60ml / 27,000</dd>
+                <a href="../sub/product-detail.html"><img src="../images/sub/product/toner-04.png" alt="토너"></a>
+                <dt>비터 오렌지 아스트린젠트 토너</dt>
+                <dd>60ml / 39,000</dd>
                 <a href="#"><img src="../images/common/good.png" alt="찜"> </a>
                 <a href="#"><img src="../images/common/cart.png" alt="장바구니"></a>
               </dl>
 
-              <dl class="cleanser_list">
-                <a href="../sub/product-detail.html"><img src="../images/sub/product/cleanser_01.png" alt="리무브"></a>
-                <dt>리무브</dt>
-                <dd>60ml / 27,000</dd>
-                <a href="#"><img src="../images/common/good.png" alt="찜"> </a>
-                <a href="#"><img src="../images/common/cart.png" alt="장바구니"></a>
-              </dl>
             </div><!-- product_box -->
 
             <div class="product_box_bg product_box_05">
               <dl class="cleanser_list">
-                <a href="../sub/product-detail.html"><img src="../images/sub/product/cleanser_01.png" alt="리무브"></a>
-                <dt>리무브</dt>
-                <dd>60ml / 27,000</dd>
+                <a href="../sub/product-detail.html"><img src="../images/sub/product/hydr-01.png" alt="하이드레이터"></a>
+                <dt>라이트웨이트 페이셜 하이드레이팅 세럼</dt>
+                <dd>100ml / 77,000</dd>
                 <a href="#"><img src="../images/common/good.png" alt="찜"> </a>
                 <a href="#"><img src="../images/common/cart.png" alt="장바구니"></a>
               </dl>
 
               <dl class="cleanser_list">
-                <a href="../sub/product-detail.html"><img src="../images/sub/product/cleanser_01.png" alt="리무브"></a>
-                <dt>리무브</dt>
-                <dd>60ml / 27,000</dd>
+                <a href="../sub/product-detail.html"><img src="../images/sub/product/hydr-02.png" alt="하이드레이터"></a>
+                <dt>카멜리아 너트 페이셜 하이드레이팅 크림</dt>
+                <dd>60ml / 63,000</dd>
                 <a href="#"><img src="../images/common/good.png" alt="찜"> </a>
                 <a href="#"><img src="../images/common/cart.png" alt="장바구니"></a>
               </dl>
 
               <dl class="cleanser_list">
-                <a href="../sub/product-detail.html"><img src="../images/sub/product/cleanser_01.png" alt="리무브"></a>
-                <dt>리무브</dt>
-                <dd>60ml / 27,000</dd>
+                <a href="../sub/product-detail.html"><img src="../images/sub/product/hydr-04.png" alt="하이드레이터"></a>
+                <dt>세이지 앤 징크 페이셜 하이드레이팅 로션 SPF15</dt>
+                <dd>50ml / 60,000</dd>
                 <a href="#"><img src="../images/common/good.png" alt="찜"> </a>
                 <a href="#"><img src="../images/common/cart.png" alt="장바구니"></a>
               </dl>
 
-              <dl class="cleanser_list">
-                <a href="../sub/product-detail.html"><img src="../images/sub/product/cleanser_01.png" alt="리무브"></a>
-                <dt>리무브</dt>
-                <dd>60ml / 27,000</dd>
-                <a href="#"><img src="../images/common/good.png" alt="찜"> </a>
-                <a href="#"><img src="../images/common/cart.png" alt="장바구니"></a>
-              </dl>
             </div><!-- product_box -->
 
             <div class="product_box_bg product_box_06">
