--- a/sub/store-detail.html
+++ b/sub/store-detail.html
@@ -11,7 +11,7 @@
 
   <!-- 오픈그래프 설정-->
   <meta property="og:title" content="이솝"><!-- 타이틀 -->
-  <meta property="og:url" content="https://tickletheheels.github.io/aesop"><!-- 도메인 -->
+  <meta property="og:url" content="http://test.dothome.co.kr"><!-- 도메인 -->
   <meta property="og:description" content="순환을 위한 이솝의 여정"><!-- 간략한 설명, 모토나 슬로건,  -->
   <meta property="og:image" content="images/common/open.png"><!-- 이미지 비율이 있음 (크기는 없음) 2:1 비율 -->
 
